# RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebook/: RAGpipline.ipynb
